# InstallerCreator

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  README.md
.cache/jb/: compilation_graph.txt  modules_graph.txt
resources/icons/medium/: medium_icons.qrc
resources/icons/small/: small_icons.qrc
src/: main.cpp
src/core/: BinaryData.cpp  BinaryData.h  TraceSOProcess.cpp  TraceSOProcess.h
src/widgets/: CheckingToolDiag.cpp  CheckingToolDiag.h  CheckingToolDiag.ui  MainWindow.cpp  MainWindow.h  MainWindow.ui  PathCheckFinderWgt.cpp  PathCheckFinderWgt.h  PathCheckFinderWgt.ui  RenamePathDialog.cpp  RenamePathDialog.h  RenamePathDialog.ui
